<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">nubank</string>

    <!-- Activity Main -->
    <string name="txt_greetings">Olá, %s</string>

    <string name="txt_account">Conta</string>
    <string name="txt_balance">R$1.752,90</string>
    <string name="txt_balance_hidden">R$---------</string>

    <string name="txt_pix">Área Pix</string>
    <string name="txt_pay">Pagar</string>
    <string name="txt_transfer">Trasferir</string>
    <string name="txt_deposit">Depositar</string>
    <string name="txt_recharge">Recarregar</string>

    <string name="txt_card">Meus Cartões</string>


    <string name="txt_buracia">Salve seus amigos da burocracia.</string>
    <string name="txt_convite_Nubank">Faça um covite para o Nubank</string>
    <string name="txt_emprestimos">Você tem até R$ 25.000,00 diponíveis para empréstimo. </string>

    <string name="txt_credit_card">Cartão de crédito</string>
    <string name="txt_current_invoice">Fatura Atual</string>
    <string name="txt_invoice_amount">R$ 1.685,94</string>
    <string name="txt_limit">Limite disponível de %s</string>
    <string name="txt_btn_split_purchases">Parcelar compras</string>

    <!-- Content Description-->
    <string name="dc_heart">Icone de um coração</string>
    <string name="dc_user">Icone de um boneco representando um usuário</string>
    <string name="dc_eyes_closed">Icone de um olho fechado, representando que os valores da conta não podem ser exibidos.</string>
    <string name="dc_eyes_open">Icone de um olho aberto, representando que os valores da conta podem ser exibidos.</string>
    <string name="dc_help">Icone de um círculo com ponto de interrogação, indicando um local para ajuda.</string>
    <string name="dc_logout">Icone de logout, uma porta com uma seta indicando que deseja sair</string>
    <string name="dc_pix">Logo do PIX</string>
    <string name="dc_barcode">Icone de códigos de barras</string>
    <string name="dc_transfer">Icone quadrado com uma seta subindo, indicando saída de dinheiro. </string>
    <string name="dc_deposit">Icone quadrado com uma seta decendo, indicando entrada de dinheiro. </string>
    <string name="dc_cell_phone">Icone de celular</string>
    <string name="dc_credit_car">Icone de cartão de crédito</string>
    <string name="dc_arrow_right">Seta apontando para a direita</string>
    <string name="dc_div_gray">Retângulo cinza</string>
    <string name="dc_circle_gray">Círculo cinza</string>


    <!-- Facebook -->
    <string name="facebook_app_id">273794421397764</string>
    <string name="fb_login_protocol_scheme">fb273794421397764</string>

    <!-- Activity Authetication -->
    <string name="txt_title">Faça seu login</string>
    <string name="hint_nome">Nome*</string>
    <string name="hint_email">E-mail*</string>
    <string name="hint_password">Senha*</string>
    <string name="button_continue">Continuar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="txt_btn_forget_password">Esqueci minha senha</string>
    <string name="txt_btn_no_client">Ainda não sou cliente</string>


    <string name="txt_title_create_user">Crie sua conta</string>
    <string name="txt_required_fields">*Campo Obrigatório</string>
    <string name="txt_send_email">Instruções para redefinir senha foram enviadas para o e-mail</string>
    <string name="txt_not_send_email">E-mail não existente</string>
    <string name="text_reset_password">Insira o e-mail para recuperar a senha</string>

    <string name="text_btn_anticipate">Antecipar</string>
    <string name="text_btn_pay">Pagar</string>
    <string name="text_proximas_fatura">Próximas fatura</string>
    <string name="text_valor_proxima_fatura"><b>%s</b> \n<font color="#7E8081">Próximas fatura</font></string>
    <string name="text_fatura_atual">Fatura atual</string>
    <string name="text_valor_fatura_atual"><b>%s</b> \n<font color="#7E8081">Fatura atual</font></string>
    <string name="text_fatura_fechada">Fatura fechada</string>
    <string name="text_valor_fatura_fechada"><b>%s</b> \n<font color="#7E8081">Fatura fechada </font></string>
    <string name="text_limite_disponivel">Limite disponível <b>%s</b></string>
    <string name="text_valor_limite">%s</string>
    <string name="txt_ajustar_limite">Ajustar Limite</string>
    <string name="txt_resumo_fatura">Resumo de faturas</string>
    <string name="txt_cartoes">Meus cartões</string>
    <string name="txt_inidicar_amigos">Indicar Amigos</string>
    <string name="txt_pagar_fatura">Pagar fatura</string>
    <string name="text_nome_empresa_compra">Apple.ComBill</string>
    <string name="text_hora_compra">16:10</string>
    <string name="text_valor_compra">R$ 3,50</string>
    <string name="text_data_vencimento">Vence em <b> 10 MAI </b></string>
    <string name="text_btn_parcelar">Parcelar</string>
    <string name="text_valor_limite_teste"><b>%s</b> \n<font color="#7E8081">Limite disponível </font></string>

    <string name="text_name_client"><b> Carla Maria Ferreria </b> \n<font color="#7E8081"> ... 4512 </font></string>


    <string name="text_cartao_virtual">Cartão Virtual</string>
    <string name="text_cartao_fisico">Cartão Físico</string>

    <string name="text_valor_a_pagar">Quanto você quer pagar?</string>
    <string name="text_informacoes_fatura_aberta">A fatura continuará aberta, com o fechamento dia 04 JUN.</string>
    <string name="text_cd_icon_close">Ícone em forma de X para o usuário fechar SheetBottom</string>
    <string name="text_btn_fazer_login">Fazer Login</string>
    <string name="dc_medication">Ícone de um ponte com um símbolo de mais  no interior representando um medicamento</string>
    <string name="text_nome_empresa_compra_medicamento">Drogasil</string>
    <string name="text_hora_compra_medicamento">15:48</string>
    <string name="text_valor_compra_medicamento">R$ 8,50</string>
    <string name="dc_controller">Ícone de um controle de vídeo game</string>
    <string name="text_nome_empresa_compra_jogos">Steam</string>
    <string name="text_hora_compra_jogos">12:32</string>
    <string name="text_valor_compra_jogos">R$ 45,00</string>
    <string name="text_novo_cartao_virtual">Criar carão virtual</string>
    <string name="text_titulo_toobar">Ajuste de Limite</string>
    <string name="text_pedir_limite">Pedir Limite</string>
    <string name="text_limite_disponivel_uso">%s disponível para uso</string>
    <string name="text_cartao_compra">Cartão virtual ..... %d</string>
    <string name="text_parcelas_compras">%d x %s</string>
    <string name="text_informacoes_faturas">Aqui você verá a lista de todas as suas faturas pagas, fechadas, abertas e futuras (como compras parceladas)</string>
    <string name="text_titulo_toobar_faturas">Resumo de faturas</string>
</resources>
