<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dp"
    tools:context=".ui.fragment.AllInvoiceFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_valor_limite"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_limite_disponivel"
            android:textColor="@color/letras_cinzas" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_valor_fatura_fechada"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_fatura_fechada"
            android:textColor="@color/letras_cinzas" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_valor_fatura_atual"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_fatura_atual"
            android:textColor="@color/letras_cinzas" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_valor_proxima_fatura"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_proximas_fatura"
            android:textColor="@color/letras_cinzas" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_light"
            android:text="@string/text_btn_pay"
            android:layout_marginBottom="50dp"
            android:textColor="@color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/text_btn_anticipate"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>