<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".ui.fragment.CurrentInvoiceFragment"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_fatura_fechada"
        android:textColor="@color/letras_cinzas"
        android:textStyle="bold"
        style="@style/TextAppearance.Material3.BodyMedium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_valor_limite"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginVertical="6dp"
        style="@style/TextAppearance.Material3.HeadlineSmall"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_limite_disponivel"
        android:textColor="@color/letras_cinzas"
        style="@style/TextAppearance.Material3.BodyMedium"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_data_vencimento"
        android:layout_marginVertical="6dp"
        android:textColor="@color/letras_cinzas"
        style="@style/TextAppearance.Material3.BodyMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_pay"
            style="@style/Widget.AppNubank.Button.Red"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppNubank.Button.Gray"
            android:text="@string/text_btn_parcelar"
            android:layout_marginStart="20dp" />
    </LinearLayout>

</LinearLayout>