<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.fragment.InvoicePaymentFragment">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitStart"
        android:contentDescription="@string/text_cd_icon_close"
        android:src="@drawable/ic_close"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:text="@string/text_valor_a_pagar"
        android:layout_marginHorizontal="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/text_valor_limite"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/letras_cinzas"
        android:text="@string/text_informacoes_fatura_aberta" />

</LinearLayout>