<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.fragment.MyCardFragment">


        <ImageView
            android:id="@+id/img_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/text_cd_icon_close"
            android:scaleType="fitStart"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/tv_my_cards"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_card"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cartao_virtual"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/text_cartao_virtual"
            android:textColor="@color/letras_cinzas" />


        <TextView
            android:id="@+id/tv_cartao_virtual_card"
            style="@style/Widget.AppNubank.TextView.Two.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_name_client"
            app:drawableStartCompat="@drawable/ic_credit_card" />


        <TextView
            android:id="@+id/tv_cartao_virtual_fisico"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/text_cartao_fisico"
            android:textColor="@color/letras_cinzas" />


        <TextView
            android:id="@+id/tv_cartao_card"
            style="@style/Widget.AppNubank.TextView.Two.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_name_client"
            app:drawableStartCompat="@drawable/ic_credit_card" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:dividerColor="@color/circulo"
            app:dividerThickness="2dp" />

        <TextView
            android:id="@+id/tv_criar_cartao_virtual_card"
            style="@style/Widget.AppNubank.TextView.One.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/text_novo_cartao_virtual"
            app:drawableStartCompat="@drawable/ic_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="200dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>