<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_item_purchase"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_circle_medication"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/circulo"
        android:contentDescription="@string/dc_medication"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circulo.menor"
        app:srcCompat="@drawable/ic_outline_medication" />

    <TextView
        android:id="@+id/tv_nome_empresa"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_nome_empresa_compra_medicamento"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/img_circle_medication"
        app:layout_constraintTop_toTopOf="@id/img_circle_medication" />

    <TextView
        android:id="@+id/tv_horario_compra"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hora_compra_medicamento"
        android:textColor="@color/letras_cinzas"
        app:layout_constraintStart_toStartOf="@id/tv_nome_empresa"
        app:layout_constraintTop_toBottomOf="@id/tv_nome_empresa" />

    <TextView
        android:id="@+id/tv_valor_compra"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:text="@string/text_valor_compra_medicamento"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_nome_empresa" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:dividerColor="@color/circulo"
        app:dividerThickness="2dp"
        app:layout_constraintTop_toBottomOf="@id/tv_horario_compra" />

</androidx.constraintlayout.widget.ConstraintLayout>